# locatest

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css  test-setup.js
frontend/src/__tests__/: App.test.jsx
locatest/: agent.py  main.py
locatest/agents/: locale_agent.py  orchestrator.py  rca_agent.py  simulation_agent.py  test_suite_agent.py
locatest/config/: settings.py
locatest/data/: mock_data.py
locatest/routing/: semantic_router.py
locatest/tools/: test_tools.py
static/: index.html
static/assets/: index-B4y1G9lF.js  index-B4z8VF24.css  index-B9nBLbns.js  index-BX_L0Npv.js  index-BrEP086w.js  index-CJuQyjXF.js  index-CKxKKDI1.js  index-CbYUPdLQ.css  index-D56IqzUZ.js  index-DI51HC1f.css  index-DPHQKLTY.js  index-TpUXxB1M.css  index-pI2GsDZT.css  index-yma5XOt3.css
tests/: test_api.py  test_tools.py
