[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "locatest"
version = "0.1.0"
description = "LocaTest — Google Nest Localization QA Platform"
requires-python = ">=3.11"
dependencies = [
    "google-adk==1.3.0",
    "google-genai>=0.8.0",
    "fastapi>=0.115.0",
    "sse-starlette>=2.1.0",
    "pydantic-settings>=2.4.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.hatch.build.targets.wheel]
packages = ["locatest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
